--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -33,6 +33,11 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out
+        uses: actions/checkout@v2
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
+      - run: npm i
       - name: Setup local env
         run: |
           echo API_SERVER_URL=http://api.powerit.loc:3000 >> .env
