--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -5,7 +5,9 @@ on:
       - master
 
 name: deploy
-
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -32,6 +34,9 @@ jobs:
           ssh -i $HOME/.ssh/key -o StrictHostKeyChecking=no $USER@$HOST "service nginx restart"
   docker:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Check out
         uses: actions/checkout@v2
